gcc/testsuite/rust/rustc/ui/const-generics/unknown_adt_dg.rs
fn main() {
    let _: UnknownStruct<7>;
// { dg-error ".E0412." "" { target *-*-* } .-1 }
}

